--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "systemd sockets for node.js applications",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -C -R dot **/*.spec.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/herzi/systemd-socket/issues"
   },
-  "homepage": "https://github.com/herzi/systemd-socket"
+  "homepage": "https://github.com/herzi/systemd-socket",
+  "devDependencies": {
+    "mocha": "~1.18.2",
+    "chai": "~1.9.1"
+  }
 }
